--- a/gradle.properties
+++ b/gradle.properties
@@ -1,2 +1,4 @@
 org.gradle.jvmargs=-Xmx4G -Xms4G
 org.gradle.problems.report=false
+# If this line already exists, change it. If not, add this line.
+org.gradle.jvmargs=-Xmx2G
